--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ html{
   --red-1:#cc6060;
   --red-2:#5f0f12;
   --white:#fffffe;
-  --background:#004643;
+  --background:#003a6f;
   --secondary:#f9bc60;
   --primary:#abd1c6;
   --tertiary:#e16162;
